Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -262,11 +262,19 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+RÁDIAS
 " target="_self"><b>
-NOME🔴
+RÁDIAS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+ÁUDIOS
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+MP3
+" target="_self"><b>
+MP3
+</b>(<FONT COLOR="#095202">
+ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -274,7 +282,7 @@ LINK🔴
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -282,15 +290,7 @@ LINK🔴
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -304,7 +304,7 @@ LINK🔴
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -312,7 +312,7 @@ LINK🔴
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
