Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -262,7 +262,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-RÁDIAS
+RÁDIAS/1 - Copia.html
 " target="_self"><b>
 RÁDIAS
 </b>(<FONT COLOR="#095202">
@@ -270,7 +270,7 @@ RÁDIAS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-MP3
+MP3/1 - Copia.html
 " target="_self"><b>
 MP3
 </b>(<FONT COLOR="#095202">
@@ -278,7 +278,7 @@ MP3
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+LINK🔴/1 - Copia.html
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
@@ -286,7 +286,7 @@ NOME🔴
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+LINK🔴/1 - Copia.html
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
@@ -300,7 +300,7 @@ NOME🔴
 
 
 <li><a href="
-LINK🔴
+LINK🔴/1 - Copia.html
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
@@ -308,7 +308,7 @@ NOME🔴
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+LINK🔴/1 - Copia.html
 " target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
