--- a/index_arquivos/0-EXEMPLO/1 - Copia.html
+++ b/index_arquivos/0-EXEMPLO/1 - Copia.html
@@ -131,7 +131,8 @@ body {margin:0;}
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--------------------------------------------------------------------------------->
-<!------------RELOGIO NOVO RELÓGIO BOM--------------->
+<!--------------------------------------------------------------------------------->
+<!------------RELOGIO NOVO RELÓGIO BOM------
 <center><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
 var now = new Date();
@@ -163,7 +164,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT><mark>
+</SCRIPT><mark><!---------------------------------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
@@ -187,6 +188,7 @@ document.write('  '+todaysDate);
     window.setInterval("Horario()",1000);
 //-->
 </SCRIPT></body></html></mark></u></CENTER>
+<!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!--##############################################################################-->
 <!--##############################################################################-->
@@ -263,7 +265,7 @@ img {
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -271,7 +273,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -279,7 +281,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -287,7 +289,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -301,7 +303,7 @@ NOME⚫
 
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -309,7 +311,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
