--- a/index_arquivos/AUDIOS/MP3/1.html
+++ b/index_arquivos/AUDIOS/MP3/1.html
@@ -131,7 +131,8 @@ body {margin:0;}
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--------------------------------------------------------------------------------->
-<!------------RELOGIO NOVO RELÓGIO BOM--------------->
+<!--------------------------------------------------------------------------------->
+<!------------RELOGIO NOVO RELÓGIO BOM------
 <center><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
 var now = new Date();
@@ -163,7 +164,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT><mark>
+</SCRIPT><mark><!---------------------------------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
@@ -187,6 +188,8 @@ document.write('  '+todaysDate);
     window.setInterval("Horario()",1000);
 //-->
 </SCRIPT></body></html></mark></u></CENTER>
+<!---------------------------------------------------------------------------------->
+
 <!---------------------------------------------------------------------------------->
 <!--##############################################################################-->
 <!--##############################################################################-->
