Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -131,7 +131,7 @@ body {margin:0;}
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--------------------------------------------------------------------------------->
-<!------------RELOGIO NOVO RELÓGIO BOM--------------->
+<!------------RELOGIO NOVO RELÓGIO BOM------
 <center><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
 var now = new Date();
@@ -163,7 +163,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT><mark>
+</SCRIPT><mark><!---------------------------------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
