--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ img {
 <li><a href="
 LINK🔴
 " target="_self"><b>
-NOME🔴
+Downloads do App via zip
 </b>(<FONT COLOR="#095202">
-NOME⚫
+2 tipos do mesmo App
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
