--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@ img {
 <!------------------------- _blank --- _self ----------------------->
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
+<li><a href="index_arquivos/ARQUIVOS DO SITE/ZUUNET.zip
 " target="_self"><b>
 Downloads do App via zip
 </b>(<FONT COLOR="#095202">
