--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Downloads do App via zip
 <li><a href="
 LINK🔴
 " target="_self"><b>
-NOME🔴
+Envie o link do site para um amigo via WhatsApp
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
@@ -279,7 +279,7 @@ NOME⚫
 <li><a href="
 LINK🔴
 " target="_self"><b>
-NOME🔴
+Escanei o qr code
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
