--- a/index.html
+++ b/index.html
@@ -271,41 +271,23 @@ Downloads do App via zip
 <li><a href="
 LINK🔴
 " target="_self"><b>
-Envie o link do site para um amigo via WhatsApp
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
+Envie o link do site para um amigo via 
+</b><FONT COLOR="#00ff11">
+WhatsApp
+</FONT>.</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
-" target="_self"><b>
-Escanei o qr code
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
+index_arquivos/ARQUIVOS DO SITE/ZUUNET.png
+" target="_blank">
+<img src="index_arquivos/ARQUIVOS DO SITE/ZUUNET.png" width="115" height="115"><br/>
+<b>Escanei o </b><FONT COLOR="#0000ff">qr code</FONT>.</a></li>
 <!------------------------------------------------------------------>
 
 
 
 
 
-
-<li><a href="
-LINK🔴
-" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
+<!------------------------------
 <li><a href="
 LINK🔴
 " target="_self"><b>
