Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -280,7 +280,7 @@ MP3
 <li><a href="
 LINK🔴/1 - Copia.html
 " target="_self"><b>
-NOME🔴
+COLETÂNEAS
 </b>(<FONT COLOR="#095202">
 ÁUDIOS
 </FONT>).</a></li>
@@ -288,25 +288,27 @@ NOME🔴
 <li><a href="
 LINK🔴/1 - Copia.html
 " target="_self"><b>
-NOME🔴
+PASTAS DRIVE
 </b>(<FONT COLOR="#095202">
 ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
-
-
-
-
-
-
 <li><a href="
 LINK🔴/1 - Copia.html
 " target="_self"><b>
-NOME🔴
+PLAYLISTS DE MÚSICAS
 </b>(<FONT COLOR="#095202">
 ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
+
+
+
+
+
+
+
+<!-------------------------------
 <li><a href="
 LINK🔴/1 - Copia.html
 " target="_self"><b>
