Update 1 - Copia.html

--- a/index_arquivos/DOCUMENTOS/1 - Copia.html
+++ b/index_arquivos/DOCUMENTOS/1 - Copia.html
@@ -266,7 +266,7 @@ img {
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+PDF
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
@@ -274,7 +274,7 @@ NOME⚫
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+LIVROS E-BOOK
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
@@ -282,7 +282,7 @@ NOME⚫
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+HTML
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
@@ -290,7 +290,23 @@ NOME⚫
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+TXT
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+DOC. GOOGLE
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+WORD
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
