Update 1 - Copia.html

--- a/index_arquivos/IMAGENS/1 - Copia.html
+++ b/index_arquivos/IMAGENS/1 - Copia.html
@@ -266,7 +266,31 @@ img {
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+QR CODE
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+ÁLBUM
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+FOTOS ADULTAS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+IMAGENS
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
@@ -287,14 +311,7 @@ NOME🔴
 NOME⚫
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
+
 
 
 
