Update 1 - Copia.html

--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -266,6 +266,102 @@ img {
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
+MEUS SITES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+SITES INTERNOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+SITES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+SITES ADULTOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+APP'S E PROGRAMAS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+TEMAS E EXTENSÕES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+DOWNLOADS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+MAPAS E LUGARES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+LINKS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
