--- a/index_arquivos/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/1 - Copia.html
@@ -266,6 +266,134 @@ img {
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
+VÍDEOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+FILMES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+RECEITAS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+DESENHOS ANIMADOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+TV
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+CANAIS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+DICAS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+SAÚDE
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+DOCUMENTÁRIOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+INTERESSANTES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+COMOVENTES
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+CASOS CRIMINAIS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+PLAYLISTES DE VÍDEOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+VÍDEOS ADULTOS
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+NOME⚫
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
