Update 1 - Copia.html

--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -338,7 +338,7 @@ NOME⚫
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+HTML
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
