--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:active{
 text-decoration:none;
 color:green;
 }
-</style>
+</style><body bgcolor="linen"></body>
 <!---------------------------------
 <body bgcolor="linen"></body>
 <body bgcolor="#d0e4fe"></body>
@@ -221,7 +221,7 @@ document.write('  '+todaysDate);
 #myUL li a {
   border: 1px solid #ddd;
   margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
+  background-color: linen;
   padding: 12px;
   text-decoration: none;
   font-size: 18px;
