--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@ WhatsApp
 <!------------------------------------------------------------------>
 <li><a href="
 index_arquivos/ARQUIVOS DO SITE/ZUUNET.png
-" target="_blank">
+" target="_blank"><CENTER>
 <img src="index_arquivos/ARQUIVOS DO SITE/ZUUNET.png" width="115" height="115"><br/>
-<b>Escanei o </b><FONT COLOR="#0000ff">qr code</FONT>.</a></li>
+<b>Escanei o </b><FONT COLOR="#0000ff">qr code</FONT></CENTER></a></li>
 <!------------------------------------------------------------------>
 
 
