--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ Downloads do App via zip
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
-" target="_self"><b>
+https://wa.me/?text= Esse é o link para o site ZUUNET - https://fsgithu.github.io/ZUUNET/ | ou baixe o App - https://fsgithu.github.io/ZUUNET/index_arquivos/ARQUIVOS%20DO%20SITE/ZUUNET.zip
+" target="_blank"><b>
 Envie o link do site para um amigo via 
 </b><FONT COLOR="#00ff11">
 WhatsApp
