--- a/index_arquivos/ARQUIVOS DO SITE/ZUUNET.html
+++ b/index_arquivos/ARQUIVOS DO SITE/ZUUNET.html
@@ -145,8 +145,8 @@ document.write('  '+todaysDate);
 <!---------------------------------------------------------------------------------->
 <hr class="new1"></center>
 <!---------------------FAIXA AZUL-- _blank --- _self -----
-<li><a href="index_arquivos/LINK-001/1 - Copia.html" target="_self">
-<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME</FONT></x></div></a></li>
+<a href="index_arquivos/LINK-001/1 - Copia.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME</FONT></x></div></a>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -160,8 +160,8 @@ document.write('  '+todaysDate);
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!---------------------------------------------------------------------------------->
-<li><a href="https://fsgithu.github.io/ZUUNET/" target="_self">
-<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>ABRA O SITE E VEJA ON-LINE</FONT></x></div></a></li>
+<a href="https://fsgithu.github.io/ZUUNET/" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>ABRA O SITE E VEJA ON-LINE</FONT></x></div></a>
 <!---------------------------------------------------------------------------------->
 
 
