--- a/index_arquivos/DOCUMENTOS/1 - Copia.html
+++ b/index_arquivos/DOCUMENTOS/1 - Copia.html
@@ -268,7 +268,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 PDF
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -276,7 +276,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 LIVROS E-BOOK
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -284,7 +284,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 HTML
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -292,7 +292,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 TXT
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -300,7 +300,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 DOC. GOOGLE
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -308,7 +308,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 WORD
 </b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -317,20 +317,14 @@ NOME⚫
 
 
 
+
+<!-------------------------------
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
