Update 1 - Copia.html

--- a/index_arquivos/IMAGENS/1 - Copia.html
+++ b/index_arquivos/IMAGENS/1 - Copia.html
@@ -268,7 +268,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 QR CODE
 </b>(<FONT COLOR="#095202">
-NOME⚫
+IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -276,7 +276,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 ÁLBUM
 </b>(<FONT COLOR="#095202">
-NOME⚫
+IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -284,7 +284,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 FOTOS ADULTAS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -292,23 +292,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 IMAGENS
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -317,21 +301,13 @@ NOME⚫
 
 
 
-
+<!-------------------------------
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
