--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -268,7 +268,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 MEUS SITES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -276,7 +276,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 SITES INTERNOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -284,7 +284,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 SITES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -292,7 +292,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 SITES ADULTOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -300,7 +300,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 APP'S E PROGRAMAS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -308,7 +308,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 TEMAS E EXTENSÕES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -316,7 +316,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 DOWNLOADS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -324,7 +324,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 MAPAS E LUGARES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -332,7 +332,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 LINKS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -340,7 +340,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 HTML
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -348,7 +348,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 PASTA GOOGLE DRIVE
 </b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -356,39 +356,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -397,20 +365,14 @@ NOME⚫
 
 
 
+
+<!------------------------------------
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
