Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/1 - Copia.html
@@ -268,7 +268,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 VÍDEOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -276,7 +276,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 FILMES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -284,7 +284,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 RECEITAS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -292,7 +292,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 DESENHOS ANIMADOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -300,7 +300,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 TV
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -308,7 +308,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 CANAIS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -316,7 +316,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 DICAS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -324,7 +324,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 SAÚDE
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -332,7 +332,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 DOCUMENTÁRIOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -340,7 +340,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 INTERESSANTES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -348,7 +348,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 COMOVENTES
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -356,7 +356,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 CASOS CRIMINAIS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -364,7 +364,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 PLAYLISTES DE VÍDEOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -372,7 +372,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 VÍDEOS ADULTOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -380,47 +380,7 @@ LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -428,21 +388,13 @@ NOME⚫
 
 
 
-
+<!-----------------------------------
 <li><a href="
 LINK🔴
 /1 - Copia.html" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
-</FONT>).</a></li>
-<!------------------------------------------------------------------>
-<li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
-</b>(<FONT COLOR="#095202">
-NOME⚫
+VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
