--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -278,7 +278,7 @@ MP3
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴/1 - Copia.html
+COLETÂNEAS/1 - Copia.html
 " target="_self"><b>
 COLETÂNEAS
 </b>(<FONT COLOR="#095202">
@@ -286,15 +286,15 @@ COLETÂNEAS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴/1 - Copia.html
+PASTAS DRIVE COM MÚSICAS/1 - Copia.html
 " target="_self"><b>
-PASTAS DRIVE
+PASTAS DRIVE COM MÚSICAS
 </b>(<FONT COLOR="#095202">
 ÁUDIOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴/1 - Copia.html
+PLAYLISTS DE MÚSICAS/1 - Copia.html
 " target="_self"><b>
 PLAYLISTS DE MÚSICAS
 </b>(<FONT COLOR="#095202">
