Update 1 - Copia.html

--- a/index_arquivos/DOCUMENTOS/1 - Copia.html
+++ b/index_arquivos/DOCUMENTOS/1 - Copia.html
@@ -264,7 +264,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+PDF
 /1 - Copia.html" target="_self"><b>
 PDF
 </b>(<FONT COLOR="#095202">
@@ -272,7 +272,7 @@ DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+LIVROS E-BOOK
 /1 - Copia.html" target="_self"><b>
 LIVROS E-BOOK
 </b>(<FONT COLOR="#095202">
@@ -280,7 +280,7 @@ DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+../HTML
 /1 - Copia.html" target="_self"><b>
 HTML
 </b>(<FONT COLOR="#095202">
@@ -288,7 +288,7 @@ DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+TXT
 /1 - Copia.html" target="_self"><b>
 TXT
 </b>(<FONT COLOR="#095202">
@@ -296,7 +296,7 @@ DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+DOC. GOOGLE
 /1 - Copia.html" target="_self"><b>
 DOC. GOOGLE
 </b>(<FONT COLOR="#095202">
@@ -304,7 +304,7 @@ DOCUMENTOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+WORD
 /1 - Copia.html" target="_self"><b>
 WORD
 </b>(<FONT COLOR="#095202">
