--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -336,7 +336,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+../HTML
 /1 - Copia.html" target="_self"><b>
 HTML
 </b>(<FONT COLOR="#095202">
