Update 1 - Copia.html

--- a/index_arquivos/IMAGENS/1 - Copia.html
+++ b/index_arquivos/IMAGENS/1 - Copia.html
@@ -264,7 +264,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+QR CODE
 /1 - Copia.html" target="_self"><b>
 QR CODE
 </b>(<FONT COLOR="#095202">
@@ -272,7 +272,7 @@ IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+ÁLBUM
 /1 - Copia.html" target="_self"><b>
 ÁLBUM
 </b>(<FONT COLOR="#095202">
@@ -280,7 +280,7 @@ IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+FOTOS ADULTAS
 /1 - Copia.html" target="_self"><b>
 FOTOS ADULTAS
 </b>(<FONT COLOR="#095202">
@@ -288,7 +288,7 @@ IMAGENS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+IMAGENS
 /1 - Copia.html" target="_self"><b>
 IMAGENS
 </b>(<FONT COLOR="#095202">
