Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/1 - Copia.html
@@ -262,6 +262,14 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
+RÁDIAS TODAS/index.html
+" target="_self"><b>
+RÁDIAS TODAS
+</b>(<FONT COLOR="#095202">
+ÁUDIOS
+</FONT>).</a></li>
+<!---------------------------------
+<li><a href="
 RÁDIAS/1 - Copia.html
 " target="_self"><b>
 RÁDIAS
