Update 1 - Copia.html

--- a/index_arquivos/AUDIOS/RÁDIAS/1 - Copia.html
+++ b/index_arquivos/AUDIOS/RÁDIAS/1 - Copia.html
@@ -264,9 +264,9 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+RÁDIAS TODAS/index.html
 " target="_self"><b>
-NOME🔴
+RÁDIAS TODAS
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
