--- a/index_arquivos/AUDIOS/RÁDIAS TODAS/index.html
+++ b/index_arquivos/AUDIOS/RÁDIAS TODAS/index.html
@@ -95,11 +95,12 @@ body {margin:0;}
 <BR/><BR/><BR/>
 <!---------------------------------------------------------------------------------->
 <p><a href="index_arquivos/COLETÂNEAS/
-NOME DA MÚSICA🔴
+Web Rádio Ceará Rural
 .html" target="meu_iframe"><img src="
-IMAGEM🔴
+https://img.radios.com.br/radio/lg/radio155529_1714413888.png
 " alt="Avatar" class="avatar">  
-NOME🔴
+Web Rádio Ceará Rural
+Fortaleza - CE - Brasil
 </a>
 <!---------------------------------------------------------------------------------->
 <p><a href="index_arquivos/COLETÂNEAS/
