--- a/index_arquivos/AUDIOS/RÁDIAS TODAS/index.html
+++ b/index_arquivos/AUDIOS/RÁDIAS TODAS/index.html
@@ -104,6 +104,14 @@ Fortaleza - CE - Brasil
 </a>
 <!---------------------------------------------------------------------------------->
 <p><a href="index_arquivos/COLETÂNEAS/
+Rádio Jovem Pan -São Paulo
+.html" target="meu_iframe"><img src="
+https://cdn.instant.audio/images/logos/radiosaovivo-net/jovem-pan.png
+" alt="Avatar" class="avatar">  
+Rádio Jovem Pan -São Paulo
+</a>
+<!---------------------------------------------------------------------------------->
+<p><a href="index_arquivos/COLETÂNEAS/
 NOME DA MÚSICA🔴
 .html" target="meu_iframe"><img src="
 IMAGEM🔴
@@ -111,6 +119,31 @@ IMAGEM🔴
 NOME🔴
 </a>
 <!---------------------------------------------------------------------------------->
+<p><a href="index_arquivos/COLETÂNEAS/
+NOME DA MÚSICA🔴
+.html" target="meu_iframe"><img src="
+IMAGEM🔴
+" alt="Avatar" class="avatar">  
+NOME🔴
+</a>
+<!---------------------------------------------------------------------------------->
+<p><a href="index_arquivos/COLETÂNEAS/
+NOME DA MÚSICA🔴
+.html" target="meu_iframe"><img src="
+IMAGEM🔴
+" alt="Avatar" class="avatar">  
+NOME🔴
+</a>
+<!---------------------------------------------------------------------------------->
+<p><a href="index_arquivos/COLETÂNEAS/
+NOME DA MÚSICA🔴
+.html" target="meu_iframe"><img src="
+IMAGEM🔴
+" alt="Avatar" class="avatar">  
+NOME🔴
+</a>
+<!---------------------------------------------------------------------------------->
+
 
 
 
