Update 1 - Copia.html

--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -264,7 +264,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+MEUS SITES
 /1 - Copia.html" target="_self"><b>
 MEUS SITES
 </b>(<FONT COLOR="#095202">
@@ -272,7 +272,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+SITES INTERNOS
 /1 - Copia.html" target="_self"><b>
 SITES INTERNOS
 </b>(<FONT COLOR="#095202">
@@ -280,7 +280,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+SITES
 /1 - Copia.html" target="_self"><b>
 SITES
 </b>(<FONT COLOR="#095202">
@@ -288,7 +288,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+SITES ADULTOS
 /1 - Copia.html" target="_self"><b>
 SITES ADULTOS
 </b>(<FONT COLOR="#095202">
@@ -296,7 +296,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+APP'S E PROGRAMAS
 /1 - Copia.html" target="_self"><b>
 APP'S E PROGRAMAS
 </b>(<FONT COLOR="#095202">
@@ -304,7 +304,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+TEMAS E EXTENSÕES
 /1 - Copia.html" target="_self"><b>
 TEMAS E EXTENSÕES
 </b>(<FONT COLOR="#095202">
@@ -312,7 +312,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+DOWNLOADS
 /1 - Copia.html" target="_self"><b>
 DOWNLOADS
 </b>(<FONT COLOR="#095202">
@@ -320,7 +320,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+MAPAS E LUGARES
 /1 - Copia.html" target="_self"><b>
 MAPAS E LUGARES
 </b>(<FONT COLOR="#095202">
@@ -328,7 +328,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+LINKS
 /1 - Copia.html" target="_self"><b>
 LINKS
 </b>(<FONT COLOR="#095202">
@@ -344,7 +344,7 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+PASTA GOOGLE DRIVE
 /1 - Copia.html" target="_self"><b>
 PASTA GOOGLE DRIVE
 </b>(<FONT COLOR="#095202">
