Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/1 - Copia.html
@@ -264,7 +264,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+VÍDEOS
 /1 - Copia.html" target="_self"><b>
 VÍDEOS
 </b>(<FONT COLOR="#095202">
@@ -272,7 +272,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+FILMES
 /1 - Copia.html" target="_self"><b>
 FILMES
 </b>(<FONT COLOR="#095202">
@@ -280,7 +280,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+RECEITAS
 /1 - Copia.html" target="_self"><b>
 RECEITAS
 </b>(<FONT COLOR="#095202">
@@ -288,7 +288,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+DESENHOS ANIMADOS
 /1 - Copia.html" target="_self"><b>
 DESENHOS ANIMADOS
 </b>(<FONT COLOR="#095202">
@@ -296,7 +296,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+TV
 /1 - Copia.html" target="_self"><b>
 TV
 </b>(<FONT COLOR="#095202">
@@ -304,7 +304,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+CANAIS
 /1 - Copia.html" target="_self"><b>
 CANAIS
 </b>(<FONT COLOR="#095202">
@@ -312,7 +312,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+DICAS
 /1 - Copia.html" target="_self"><b>
 DICAS
 </b>(<FONT COLOR="#095202">
@@ -320,7 +320,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+SAÚDE
 /1 - Copia.html" target="_self"><b>
 SAÚDE
 </b>(<FONT COLOR="#095202">
@@ -328,7 +328,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+DOCUMENTÁRIOS
 /1 - Copia.html" target="_self"><b>
 DOCUMENTÁRIOS
 </b>(<FONT COLOR="#095202">
@@ -336,7 +336,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+INTERESSANTES
 /1 - Copia.html" target="_self"><b>
 INTERESSANTES
 </b>(<FONT COLOR="#095202">
@@ -344,7 +344,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+COMOVENTES
 /1 - Copia.html" target="_self"><b>
 COMOVENTES
 </b>(<FONT COLOR="#095202">
@@ -352,7 +352,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+CASOS CRIMINAIS
 /1 - Copia.html" target="_self"><b>
 CASOS CRIMINAIS
 </b>(<FONT COLOR="#095202">
@@ -360,7 +360,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+PLAYLISTES DE VÍDEOS
 /1 - Copia.html" target="_self"><b>
 PLAYLISTES DE VÍDEOS
 </b>(<FONT COLOR="#095202">
@@ -368,7 +368,7 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+VÍDEOS ADULTOS
 /1 - Copia.html" target="_self"><b>
 VÍDEOS ADULTOS
 </b>(<FONT COLOR="#095202">
