--- a/index_arquivos/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/1 - Copia.html
@@ -376,9 +376,9 @@ VÍDEOS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+TESTE
 /1 - Copia.html" target="_self"><b>
-NOME🔴
+TESTE
 </b>(<FONT COLOR="#095202">
 VÍDEOS
 </FONT>).</a></li>
