Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS/TESTE/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/TESTE/1 - Copia.html
@@ -90,12 +90,12 @@ body {margin:0;}
 }
 .icon-bar a {
   float: left;
-  width: 16%;
+  width: 16.6%;
   text-align: center;
-  padding: 12px 0;
+  padding: 8px 0;
   transition: all 0.0s ease;
   color: white;
-  font-size: 24px;
+  font-size: 30px;
 }
 .icon-bar a:hover {
   background-color: #03fc30;
@@ -104,6 +104,7 @@ body {margin:0;}
   background-color: #03fc30;
 }
 </style><body><div class="icon-bar">
+<!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <a href="../../../index.html">🏠</a>
@@ -248,11 +249,11 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+TESTE.html
 " target="_blank"><img src="
-IMAGEM🔴
+https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxBVtSa17u-dz-Xe6Wa9hGn5RXIEzVs9Ob-1Xq31ripnD_Cg0CLyaExSjBhOI3GrU1lltomwd5B6bkn3j1l_C-81wSquQRKSBDvcqOww&s=10
 " width="150" height="150"><FONT SIZE=+2><B>
-NOME🔴
+Teste
 </B></FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
