Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS/TESTE/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/TESTE/1 - Copia.html
@@ -250,7 +250,7 @@ img {
 <!------------------------------------------------------------------>
 <li><a href="
 TESTE.html
-" target="_blank"><img src="
+" target="_self"><img src="
 https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9EHCBquCdRjJUOjRx894ugswYT8gubP02Mg&s
 " width="150" height="150"><FONT SIZE=+2><B>
 Teste
@@ -258,7 +258,7 @@ Teste
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_blank"><img src="
+" target="_self"><img src="
 IMAGEM🔴
 " width="150" height="150"><FONT SIZE=+2><B>
 NOME🔴
@@ -266,7 +266,7 @@ NOME🔴
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_blank"><img src="
+" target="_self"><img src="
 IMAGEM🔴
 " width="150" height="150"><FONT SIZE=+2><B>
 NOME🔴
@@ -274,7 +274,7 @@ NOME🔴
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_blank"><img src="
+" target="_self"><img src="
 IMAGEM🔴
 " width="150" height="150"><FONT SIZE=+2><B>
 NOME🔴
@@ -286,7 +286,7 @@ NOME🔴
 
 <li><a href="
 LINK🔴
-" target="_blank"><img src="
+" target="_self"><img src="
 IMAGEM🔴
 " width="150" height="150"><FONT SIZE=+2><B>
 NOME🔴
@@ -294,7 +294,7 @@ NOME🔴
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_blank"><img src="
+" target="_self"><img src="
 IMAGEM🔴
 " width="150" height="150"><FONT SIZE=+2><B>
 NOME🔴
