--- a/index.html
+++ b/index.html
@@ -276,6 +276,14 @@ Envie o link do site para um amigo via
 WhatsApp
 </FONT>.</a></li>
 <!------------------------------------------------------------------>
+<li><a href="index_arquivos/
+SOBRE MIM E CONTATOS
+/1 - Copia.html" target="_self"><b>
+Sobre mim e contatos
+</b>(<FONT COLOR="red">
+Santos
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
 <li><a href="
 index_arquivos/ARQUIVOS DO SITE/ZUUNET.png
 " target="_blank"><CENTER>
